Fix path to project for dotnet pack

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,9 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --configuration Release --no-restore 
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Pack
-      run: dotnet pack ./Libraries.IO.SDK/src/Libraries.IO.SDK/
+      run: dotnet pack ~/Libraries.IO.SDK/src/Libraries.IO.SDK/Libraries.IO.SDK.csproj
+      
