Fix config for dotnet test

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore 
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --configuration Release --no-build --verbosity normal
     - name: Pack
       run: dotnet pack ~/Libraries.IO.SDK/src/Libraries.IO.SDK/Libraries.IO.SDK.csproj
       
