--- a/src/Libraries.IO.SDK/Libraries.IO.SDK.csproj
+++ b/src/Libraries.IO.SDK/Libraries.IO.SDK.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<PropertyGroup>
-		<PackageId>Libraries.IO.SDK</PackageId>
+		<PackageId>Fiedler.Libraries.IO.SDK</PackageId>
 		<Version>1.0.0</Version>
 		<PackageTags>librariesio</PackageTags>
 		<Description>Client library API wrapper for https://libraries.io/api</Description>
