--- a/src/Libraries.IO.SDK/Libraries.IO.SDK.csproj
+++ b/src/Libraries.IO.SDK/Libraries.IO.SDK.csproj
@@ -9,12 +9,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="System.Text.Json" Version="8.0.4" />
 	</ItemGroup>
 
 	<PropertyGroup>
 		<PackageId>Fiedler.Libraries.IO.SDK</PackageId>
+		<Authors>Dan Fiedler</Authors>
 		<Version>1.0.0</Version>
 		<PackageTags>librariesio</PackageTags>
 		<Description>Client library API wrapper for https://libraries.io/api</Description>
