update pipelines for .NET 9

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
     # get version from tag (e.g., v1.2.3 --> 1.2.3)
     - name: Get version
       id: get_version
-      uses: JanneMattila/get-version-from-tag@v3
+      uses: JanneMattila/get-version-from-tag@v22de24a56e53ef11268538c9e6a77659a142afa7 # v4
 
     - name: Display version
       run: |
@@ -25,7 +25,7 @@ jobs:
               
     # edit Libraries.IO.SDK.csproj to replace with desired version
     - name: Replace version
-      uses: jacobtomlinson/gha-find-replace@3.0.3
+      uses: jacobtomlinson/gha-find-replace@dfbfef71bc27c27c39d89534540a8960e0eee6b0 # v3.0.5
       with:
         include: "*/Libraries.IO.SDK/Libraries.IO.SDK.csproj"
         find: <Version>1.0.0</Version>
@@ -35,7 +35,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 9.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
